# NEEM-validator

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
ci-pipeline/: gitlab-ci-testrun  gitlab-ci-testrun.yml  gitlab-ci.yml
docker/: Dockerfile  docker-compose.yaml  knowrob-base_modified.rosinstall  run_neem-validator.sh  source_ros.sh
hermit/: DUL_v32.owl  Dockerfile
launch/: knowrob.launch  validator.launch
mongo_schema/: mongo_tf_schema  tf_schema.json  triples_schema.json
owl/: README.md  knowrob.owl  unit.owl
scripts/: hermit_test.py
settings/: knowrob_config.pl  pipeline_workflow.yaml  settings.yaml
settings/gitlab-ci/: check-external-resources.yaml  check-mongodump.yaml  mongodb-schema-recommended.yaml  mongodb-schema-required.yaml  owl-consistency.yaml  semantic-actions-required.yaml  semantic-other-required.yaml  semantic-warn.yaml  tf-tests.yaml
src/: pipeline.py
src/checks/: FileserverCheck.py  FilesystemCheck.py  MongoCheck.py  NV_Check.py  NV_msg.py  OWLReasonerCheck.py  RosprologCheck.py  SchemaCheck.py
src/checks/prolog/: prolog_query_client.py  uglify.pl
src/prolog/: neem_validation.pl  uglify.pl
