<?xml version="1.0"?>
<package format="2">
  <name>neem_validator</name>
  <version>1.0.0</version>
  <description>The neem_validator package</description>

  <maintainer email="thun@uni-bremen.de">Jeremias Thun</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosprolog</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rosprolog</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rosprolog</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
